// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`normalizeDocsisStatus should work with ofdm in download 1`] = `
{
  "downstream": [
    {
      "channelId": "5",
      "channelType": "SC-QAM",
      "frequency": 602,
      "lockStatus": "Locked",
      "modulation": "256QAM",
      "powerLevel": -4,
      "snr": 38.8,
    },
    {
      "channelId": "1",
      "channelType": "SC-QAM",
      "frequency": 114,
      "lockStatus": "Locked",
      "modulation": "256QAM",
      "powerLevel": -5.4,
      "snr": 36.5,
    },
    {
      "channelId": "2",
      "channelType": "SC-QAM",
      "frequency": 130,
      "lockStatus": "Locked",
      "modulation": "256QAM",
      "powerLevel": -5.4,
      "snr": 36.8,
    },
    {
      "channelId": "3",
      "channelType": "SC-QAM",
      "frequency": 138,
      "lockStatus": "Locked",
      "modulation": "256QAM",
      "powerLevel": -5.5,
      "snr": 36.9,
    },
    {
      "channelId": "4",
      "channelType": "SC-QAM",
      "frequency": 146,
      "lockStatus": "Locked",
      "modulation": "256QAM",
      "powerLevel": -5.2,
      "snr": 37.2,
    },
    {
      "channelId": "6",
      "channelType": "SC-QAM",
      "frequency": 618,
      "lockStatus": "Locked",
      "modulation": "256QAM",
      "powerLevel": -3.8,
      "snr": 38.9,
    },
    {
      "channelId": "7",
      "channelType": "SC-QAM",
      "frequency": 626,
      "lockStatus": "Locked",
      "modulation": "256QAM",
      "powerLevel": -3.9,
      "snr": 38.9,
    },
    {
      "channelId": "8",
      "channelType": "SC-QAM",
      "frequency": 642,
      "lockStatus": "Locked",
      "modulation": "256QAM",
      "powerLevel": -4.9,
      "snr": 38.5,
    },
    {
      "channelId": "9",
      "channelType": "SC-QAM",
      "frequency": 650,
      "lockStatus": "Locked",
      "modulation": "256QAM",
      "powerLevel": -4.8,
      "snr": 38.4,
    },
    {
      "channelId": "10",
      "channelType": "SC-QAM",
      "frequency": 658,
      "lockStatus": "Locked",
      "modulation": "256QAM",
      "powerLevel": -4.1,
      "snr": 39.1,
    },
    {
      "channelId": "11",
      "channelType": "SC-QAM",
      "frequency": 666,
      "lockStatus": "Locked",
      "modulation": "256QAM",
      "powerLevel": -4.1,
      "snr": 38.7,
    },
    {
      "channelId": "12",
      "channelType": "SC-QAM",
      "frequency": 674,
      "lockStatus": "Locked",
      "modulation": "256QAM",
      "powerLevel": -3.1,
      "snr": 39,
    },
    {
      "channelId": "13",
      "channelType": "SC-QAM",
      "frequency": 682,
      "lockStatus": "Locked",
      "modulation": "256QAM",
      "powerLevel": -2.8,
      "snr": 39.7,
    },
    {
      "channelId": "14",
      "channelType": "SC-QAM",
      "frequency": 690,
      "lockStatus": "Locked",
      "modulation": "256QAM",
      "powerLevel": -1.8,
      "snr": 40.4,
    },
    {
      "channelId": "15",
      "channelType": "SC-QAM",
      "frequency": 698,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -7.7,
      "snr": 34.6,
    },
    {
      "channelId": "16",
      "channelType": "SC-QAM",
      "frequency": 706,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -6.8,
      "snr": 35.4,
    },
    {
      "channelId": "17",
      "channelType": "SC-QAM",
      "frequency": 714,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -7.1,
      "snr": 35,
    },
    {
      "channelId": "18",
      "channelType": "SC-QAM",
      "frequency": 722,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -7.2,
      "snr": 35,
    },
    {
      "channelId": "19",
      "channelType": "SC-QAM",
      "frequency": 730,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -6.9,
      "snr": 35.1,
    },
    {
      "channelId": "20",
      "channelType": "SC-QAM",
      "frequency": 738,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -5.9,
      "snr": 35.7,
    },
    {
      "channelId": "21",
      "channelType": "SC-QAM",
      "frequency": 746,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -5.6,
      "snr": 35.8,
    },
    {
      "channelId": "22",
      "channelType": "SC-QAM",
      "frequency": 754,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -6.7,
      "snr": 35,
    },
    {
      "channelId": "23",
      "channelType": "SC-QAM",
      "frequency": 762,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -6.4,
      "snr": 35.1,
    },
    {
      "channelId": "24",
      "channelType": "SC-QAM",
      "frequency": 770,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -6.3,
      "snr": 35.1,
    },
    {
      "channelId": "25",
      "channelType": "SC-QAM",
      "frequency": 778,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -6,
      "snr": 35.7,
    },
    {
      "channelId": "26",
      "channelType": "SC-QAM",
      "frequency": 786,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -6.2,
      "snr": 35.2,
    },
    {
      "channelId": "27",
      "channelType": "SC-QAM",
      "frequency": 794,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -6.5,
      "snr": 34.8,
    },
    {
      "channelId": "28",
      "channelType": "SC-QAM",
      "frequency": 802,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -7.1,
      "snr": 34.7,
    },
    {
      "channelId": "29",
      "channelType": "SC-QAM",
      "frequency": 810,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -6.9,
      "snr": 34.9,
    },
    {
      "channelId": "30",
      "channelType": "SC-QAM",
      "frequency": 818,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -6.7,
      "snr": 35,
    },
    {
      "channelId": "31",
      "channelType": "SC-QAM",
      "frequency": 826,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -7.2,
      "snr": 35,
    },
    {
      "channelId": "32",
      "channelType": "SC-QAM",
      "frequency": 834,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -7.8,
      "snr": 34.2,
    },
  ],
  "downstreamOfdm": [
    {
      "channelId": "33",
      "channelType": "OFDM",
      "frequencyEnd": 324,
      "frequencyStart": 151,
      "lockStatus": "Locked",
      "modulation": "256QAM",
      "powerLevel": -3,
      "snr": 39.55,
    },
  ],
  "upstream": [
    {
      "channelId": "1",
      "channelType": "SC-QAM",
      "frequency": 51,
      "lockStatus": "Completed",
      "modulation": "64QAM",
      "powerLevel": 49.8,
      "snr": 0,
    },
    {
      "channelId": "2",
      "channelType": "SC-QAM",
      "frequency": 44,
      "lockStatus": "Completed",
      "modulation": "64QAM",
      "powerLevel": 51.8,
      "snr": 0,
    },
    {
      "channelId": "3",
      "channelType": "SC-QAM",
      "frequency": 37,
      "lockStatus": "Completed",
      "modulation": "64QAM",
      "powerLevel": 51.8,
      "snr": 0,
    },
    {
      "channelId": "4",
      "channelType": "SC-QAM",
      "frequency": 30,
      "lockStatus": "Completed",
      "modulation": "32QAM",
      "powerLevel": 51.8,
      "snr": 0,
    },
  ],
  "upstreamOfdma": [],
}
`;

exports[`normalizeDocsisStatus should work with ofdm in download and ofdam in upload 1`] = `
{
  "downstream": [
    {
      "channelId": "5",
      "channelType": "SC-QAM",
      "frequency": 602,
      "lockStatus": "Locked",
      "modulation": "256QAM",
      "powerLevel": -4.3,
      "snr": 38.9,
    },
    {
      "channelId": "1",
      "channelType": "SC-QAM",
      "frequency": 114,
      "lockStatus": "Locked",
      "modulation": "256QAM",
      "powerLevel": -5.8,
      "snr": 36.4,
    },
    {
      "channelId": "2",
      "channelType": "SC-QAM",
      "frequency": 130,
      "lockStatus": "Locked",
      "modulation": "256QAM",
      "powerLevel": -5.8,
      "snr": 36.8,
    },
    {
      "channelId": "3",
      "channelType": "SC-QAM",
      "frequency": 138,
      "lockStatus": "Locked",
      "modulation": "256QAM",
      "powerLevel": -5.9,
      "snr": 36.9,
    },
    {
      "channelId": "4",
      "channelType": "SC-QAM",
      "frequency": 146,
      "lockStatus": "Locked",
      "modulation": "256QAM",
      "powerLevel": -5.6,
      "snr": 37.2,
    },
    {
      "channelId": "6",
      "channelType": "SC-QAM",
      "frequency": 618,
      "lockStatus": "Locked",
      "modulation": "256QAM",
      "powerLevel": -3.7,
      "snr": 39.1,
    },
    {
      "channelId": "7",
      "channelType": "SC-QAM",
      "frequency": 626,
      "lockStatus": "Locked",
      "modulation": "256QAM",
      "powerLevel": -3.4,
      "snr": 39.5,
    },
    {
      "channelId": "8",
      "channelType": "SC-QAM",
      "frequency": 642,
      "lockStatus": "Locked",
      "modulation": "256QAM",
      "powerLevel": -3.1,
      "snr": 39.8,
    },
    {
      "channelId": "9",
      "channelType": "SC-QAM",
      "frequency": 650,
      "lockStatus": "Locked",
      "modulation": "256QAM",
      "powerLevel": -2.7,
      "snr": 40,
    },
    {
      "channelId": "10",
      "channelType": "SC-QAM",
      "frequency": 658,
      "lockStatus": "Locked",
      "modulation": "256QAM",
      "powerLevel": -2.5,
      "snr": 40,
    },
    {
      "channelId": "11",
      "channelType": "SC-QAM",
      "frequency": 666,
      "lockStatus": "Locked",
      "modulation": "256QAM",
      "powerLevel": -2.9,
      "snr": 39.6,
    },
    {
      "channelId": "12",
      "channelType": "SC-QAM",
      "frequency": 674,
      "lockStatus": "Locked",
      "modulation": "256QAM",
      "powerLevel": -2.6,
      "snr": 39.6,
    },
    {
      "channelId": "13",
      "channelType": "SC-QAM",
      "frequency": 682,
      "lockStatus": "Locked",
      "modulation": "256QAM",
      "powerLevel": -2.6,
      "snr": 40.1,
    },
    {
      "channelId": "14",
      "channelType": "SC-QAM",
      "frequency": 690,
      "lockStatus": "Locked",
      "modulation": "256QAM",
      "powerLevel": -1.7,
      "snr": 40.6,
    },
    {
      "channelId": "15",
      "channelType": "SC-QAM",
      "frequency": 698,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -7.9,
      "snr": 34.7,
    },
    {
      "channelId": "16",
      "channelType": "SC-QAM",
      "frequency": 706,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -7.1,
      "snr": 35.4,
    },
    {
      "channelId": "17",
      "channelType": "SC-QAM",
      "frequency": 714,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -7.5,
      "snr": 34.8,
    },
    {
      "channelId": "18",
      "channelType": "SC-QAM",
      "frequency": 722,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -7.6,
      "snr": 35,
    },
    {
      "channelId": "19",
      "channelType": "SC-QAM",
      "frequency": 730,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -7.2,
      "snr": 35.1,
    },
    {
      "channelId": "20",
      "channelType": "SC-QAM",
      "frequency": 738,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -6.3,
      "snr": 35.8,
    },
    {
      "channelId": "21",
      "channelType": "SC-QAM",
      "frequency": 746,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -6.2,
      "snr": 35.7,
    },
    {
      "channelId": "22",
      "channelType": "SC-QAM",
      "frequency": 754,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -7.2,
      "snr": 35,
    },
    {
      "channelId": "23",
      "channelType": "SC-QAM",
      "frequency": 762,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -7,
      "snr": 35,
    },
    {
      "channelId": "24",
      "channelType": "SC-QAM",
      "frequency": 770,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -6.7,
      "snr": 35,
    },
    {
      "channelId": "25",
      "channelType": "SC-QAM",
      "frequency": 778,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -6.3,
      "snr": 35.8,
    },
    {
      "channelId": "26",
      "channelType": "SC-QAM",
      "frequency": 786,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -6.4,
      "snr": 35.3,
    },
    {
      "channelId": "27",
      "channelType": "SC-QAM",
      "frequency": 794,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -6.5,
      "snr": 35.3,
    },
    {
      "channelId": "28",
      "channelType": "SC-QAM",
      "frequency": 802,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -6.8,
      "snr": 35.2,
    },
    {
      "channelId": "29",
      "channelType": "SC-QAM",
      "frequency": 810,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -7,
      "snr": 35,
    },
    {
      "channelId": "30",
      "channelType": "SC-QAM",
      "frequency": 818,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -6.4,
      "snr": 35.3,
    },
    {
      "channelId": "31",
      "channelType": "SC-QAM",
      "frequency": 826,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -7,
      "snr": 35.2,
    },
    {
      "channelId": "32",
      "channelType": "SC-QAM",
      "frequency": 834,
      "lockStatus": "Locked",
      "modulation": "64QAM",
      "powerLevel": -7.9,
      "snr": 34.4,
    },
  ],
  "downstreamOfdm": [
    {
      "channelId": "33",
      "channelType": "OFDM",
      "frequencyEnd": 324,
      "frequencyStart": 151,
      "lockStatus": "Locked",
      "modulation": "256QAM",
      "powerLevel": -3.6,
      "snr": 39.39,
    },
  ],
  "upstream": [
    {
      "channelId": "1",
      "channelType": "SC-QAM",
      "frequency": 51,
      "lockStatus": "Completed",
      "modulation": "64QAM",
      "powerLevel": 51.8,
      "snr": 0,
    },
    {
      "channelId": "2",
      "channelType": "SC-QAM",
      "frequency": 44,
      "lockStatus": "Completed",
      "modulation": "64QAM",
      "powerLevel": 51.8,
      "snr": 0,
    },
    {
      "channelId": "3",
      "channelType": "SC-QAM",
      "frequency": 37,
      "lockStatus": "Completed",
      "modulation": "64QAM",
      "powerLevel": 51.8,
      "snr": 0,
    },
    {
      "channelId": "4",
      "channelType": "SC-QAM",
      "frequency": 30,
      "lockStatus": "Completed",
      "modulation": "32QAM",
      "powerLevel": 51.8,
      "snr": 0,
    },
  ],
  "upstreamOfdma": [
    {
      "channelId": "9",
      "channelType": "OFDMA",
      "frequencyEnd": 64.75,
      "frequencyStart": 29.8,
      "lockStatus": "Completed",
      "modulation": "QPSK",
      "powerLevel": 44,
      "snr": 0,
    },
  ],
}
`;
